[package]
name = "gamepad"
version = "0.1.4"
authors = ["Bombfuse <eiffeldud@gmail.com>"]
edition = "2018"
description = "A cross platform gamepad solution."
repository = "https://github.com/Bombfuse/gamepad"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(not(any(android)))'.dependencies]
gilrs = "0.8.1"
